--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,12 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
